[package]
name = "noline"
version = "0.2.0"
edition = "2021"
authors = ["Eivind Alexander Bergem <eivind@rustnekretser.no>"]
license = "MPL-2.0"
description = "A no_std line editor"
repository = "https://github.com/rustne-kretser/noline"
readme = "../README.md"
categories = ["no-std", "command-line-interface"]
keywords = ["no_std", "readline"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = {version = "0.7.0", default-features = false}
embedded-hal = {version = "1.0.0", optional = true}
tokio = {version = "1.16.1", optional = true, features = ["io-util", "sync"]}

[features]
default = []
std = []
embedded = ["embedded-hal"]
alloc = []

[dev-dependencies]
crossbeam = "0.8.1"
termion = "3.0.0"

[package.metadata.docs.rs]
all-features = true
