[package]
name = "noline"
version = "0.2.0"
edition = "2021"
authors = ["Eivind Alexander Bergem <eivind@rustnekretser.no>"]
license = "MPL-2.0"
description = "A no_std line editor"
repository = "https://github.com/rustne-kretser/noline"
readme = "../README.md"
categories = ["no-std", "command-line-interface"]
keywords = ["no_std", "readline"]
#include = ["**/*.rs", "Cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
num_enum = { version = "0.7.2", default-features = false }
nb = { version = "1.0.0", optional = true }
async-std = { version = "1.12.0", optional = true }


[features]
default = []
std = ["embedded-io/std", "embedded-io-async/std", "async-std"]
sync = []
async = []
embedded = ["nb"]
alloc = []

[dev-dependencies]
crossbeam = "0.8.1"
nb = { version = "1.0.0" }
termion = "4.0.0"

[package.metadata.docs.rs]
all-features = true
