[package]
name = "noline-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noline = { path = "../../noline", features = ["std", "tokio", "embedded"] }
heapless = "0.8.0"
termion = "3.0.0"
tokio = { version = "1.16.1", features = [
    "io-util",
    "sync",
    "rt",
    "macros",
    "io-std",
] }

[features]

[[bin]]
name = "std-sync"

[[bin]]
name = "std-async-tokio"

[[bin]]
name = "std-async"
