[package]
name = "noline-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38.0", features = [
    "full",
    "io-util",
    "sync",
    "rt",
    "macros",
    "io-std",
] }
noline = { path = "../../noline", features = ["std"] }
heapless = "0.8.0"
termion = "4.0.0"
embedded-io-async = "0.6.1"

[[bin]]
name = "std-sync"

[[bin]]
name = "std-async-tokio"
