[package]
name = "noline-examples-bluepill"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
embedded-hal = "1.0.0"
embedded-io = "0.6.1"
nb = "1.1.0"
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
panic-halt = "0.2.0"
usb-device = "0.3.2"
usbd-serial = "0.2.2"
noline = { path = "../../../noline/", default-features = false, features = [
    "embedded",
] }
numtoa = "0.2.4"
heapless = "0.8.0"

[dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["rt", "stm32f103", "medium", "stm32-usbd"]

[profile.release]
opt-level = "z"   # +
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = false       # better optimizations
panic = "abort"

[profile.dev] # +
opt-level = "s" # +
# codegen-units = 1
debug = true
lto = false
panic = "abort"

[profile.dev.package."*"] # +
opt-level = "z" # +

[[bin]]
name = "usb"

[[bin]]
name = "uart"
